--- a/source/PflanzenPi.UI/MainWindow.axaml
+++ b/source/PflanzenPi.UI/MainWindow.axaml
@@ -2,6 +2,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:vm="clr-namespace:PflanzenPi.UI.Viewmodel"
+        x:DataType="vm:MainViewModel"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="PflanzenPi.UI.MainWindow"
         Title="PflanzenPi.UI">
