Erster test code für das UI und das ViewModel

--- a/source/PflanzenPi.UI/MainWindow.axaml
+++ b/source/PflanzenPi.UI/MainWindow.axaml
@@ -7,5 +7,5 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="PflanzenPi.UI.MainWindow"
         Title="PflanzenPi.UI">
-    Welcome to Avalonia!
+    <TextBlock Text="{Binding Tamagotchi.CurrentMoistureStatus}"></TextBlock>
 </Window>
