--- a/source/PflanzenPi.UI/View/MainWindow.axaml
+++ b/source/PflanzenPi.UI/View/MainWindow.axaml
@@ -7,5 +7,9 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="PflanzenPi.UI.MainWindow"
         Title="PflanzenPi.UI">
-    <TextBlock Text="{Binding Tamagotchi.CurrentMoistureStatus}"></TextBlock>
+    <StackPanel Width="300" Height="300">
+        <TextBlock Text="{Binding Tamagotchi.CurrentMoistureStatus}"></TextBlock>
+        <Image Source="{Binding Tamagotchi.CurrentMoodImage, UpdateSourceTrigger=PropertyChanged}" Stretch="Uniform"></Image>
+    </StackPanel>
+  
 </Window>
